# crux-torrent

./: Cargo.toml  README.md
src/: cli.rs  main.rs  prelude.rs  torrent.rs
src/cli/: metainfo_file_path.rs  mod.rs
src/metainfo/: download_info.rs  fileinfo.rs  files.rs  metainfo.rs  mod.rs  tracker_url.rs  url.rs
src/peer_protocol/: codec.rs  handshake.rs
src/peers/: comms.rs  descriptor.rs  download_worker.rs  mod.rs  progress.rs  worker_fsm.rs
src/piece_picker/: mod.rs  piece_picker.rs  piece_picker_handle.rs
src/torrent/: bitfield.rs  info_hash.rs  mod.rs  peer_id.rs
src/tracker/: mod.rs  peers.rs  request.rs  response.rs  udp.rs
