[package]
name = "crux-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bendy = { version = "0.3.3", features = ["serde", "std"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
sha1_smol = { version = "1.0.0", features = ["std"] }
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt"] }
