[package]
name = "crux-torrent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
bitvec = "1.0.1"
clap = { version = "4.4.18", features = ["derive"] }
form_urlencoded = "1.2.1"
futures = "0.3.30"
rand = "0.8.5"
reqwest = "0.11.24"
serde = { version = "1.0.195", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.14"
sha1_smol = { version = "1.0.0", features = ["std"] }
static_str_ops = "0.1.2"
tokio = { version = "1.38.2", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"

[dev-dependencies]
rstest = "0.20.0"

